--- a/Files_before_restart/mariadb-service.yaml
+++ b/Files_before_restart/mariadb-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nextcloud-mariadb          # must match .spec.serviceName of the StatefulSet
+  name: nextcloud-mariadb
   namespace: nextcloud
 spec:
-  clusterIP: None                  # headless for stable DNS
+  clusterIP: None
   selector:
     app: nextcloud-mariadb
   ports:
