--- a/ingress.yaml
+++ b/ingress.yaml
@@ -57,6 +57,77 @@ spec:
       nodePort: 30443
       protocol: TCP
 ---
+# ==========================================
+# NEU HINZUGEFÜGT: Collabora NGINX Proxy
+# ==========================================
+# Collabora NGINX Reverse Proxy Deployment
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: collabora-nginx-proxy
+  namespace: nextcloud
+  labels:
+    app: collabora-nginx-proxy
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: collabora-nginx-proxy
+  template:
+    metadata:
+      labels:
+        app: collabora-nginx-proxy
+    spec:
+      containers:
+        - name: nginx
+          image: nginx:1.25-alpine
+          ports:
+            - containerPort: 443
+              name: https
+          volumeMounts:
+            - name: nginx-config
+              mountPath: /etc/nginx/nginx.conf
+              subPath: nginx.conf
+            - name: tls-certs
+              mountPath: /etc/nginx/ssl
+              readOnly: true
+          resources:
+            requests:
+              cpu: 50m
+              memory: 64Mi
+            limits:
+              cpu: 200m
+              memory: 256Mi
+      volumes:
+        - name: nginx-config
+          configMap:
+            name: collabora-nginx-config
+        - name: tls-certs
+          secret:
+            secretName: nextcloud-tls
+---
+# Collabora NGINX Proxy Service (NodePort)
+apiVersion: v1
+kind: Service
+metadata:
+  name: collabora-nginx-proxy
+  namespace: nextcloud
+  labels:
+    app: collabora-nginx-proxy
+spec:
+  type: NodePort
+  selector:
+    app: collabora-nginx-proxy
+  ports:
+    - name: https
+      port: 443
+      targetPort: 443
+      nodePort: 30981
+      protocol: TCP
+---
+# ==========================================
+# ENDE NEU HINZUGEFÜGT
+# ==========================================
 # HPB NGINX Reverse Proxy Deployment
 apiVersion: apps/v1
 kind: Deployment
