--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,194 +1,60 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx-reverse-proxy
-  namespace: nextcloud
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nginx-reverse-proxy
-  template:
-    metadata:
-      labels:
-        app: nginx-reverse-proxy
-    spec:
-      containers:
-        - name: nginx
-          image: nginx:1.25-alpine
-          ports:
-            - containerPort: 80
-              name: http
-            - containerPort: 443
-              name: https
-          volumeMounts:
-            - name: nginx-config
-              mountPath: /etc/nginx/nginx.conf
-              subPath: nginx.conf
-            - name: tls-certs
-              mountPath: /etc/nginx/ssl
-              readOnly: true
-      volumes:
-        - name: nginx-config
-          configMap:
-            name: nginx-config
-        - name: tls-certs
-          secret:
-            secretName: nextcloud-tls
 ---
-apiVersion: v1
-kind: Service
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: nginx-reverse-proxy
+  name: nextcloud-ingress
   namespace: nextcloud
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
+    nginx.ingress.kubernetes.io/proxy-buffering: "off"
+    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
-  type: NodePort
-  selector:
-    app: nginx-reverse-proxy
-  ports:
-    - name: http
-      port: 80
-      targetPort: 80
-      nodePort: 30080
-      protocol: TCP
-    - name: https
-      port: 443
-      targetPort: 443
-      nodePort: 30443
-      protocol: TCP
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - nextcloud.ewe-netz-backup.de
+      secretName: nextcloud-tls  # ← cert-manager erstellt das automatisch!
+  rules:
+    - host: nextcloud.ewe-netz-backup.de
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: nextcloud
+                port:
+                  number: 80
 ---
-# ==========================================
-# NEU HINZUGEFÜGT: Collabora NGINX Proxy
-# ==========================================
-# Collabora NGINX Reverse Proxy Deployment
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: collabora-nginx-proxy
+  name: collabora-ingress
   namespace: nextcloud
-  labels:
-    app: collabora-nginx-proxy
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    nginx.ingress.kubernetes.io/proxy-buffering: "off"
+    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "36000"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "36000"
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: collabora-nginx-proxy
-  template:
-    metadata:
-      labels:
-        app: collabora-nginx-proxy
-    spec:
-      containers:
-        - name: nginx
-          image: nginx:1.25-alpine
-          ports:
-            - containerPort: 443
-              name: https
-          volumeMounts:
-            - name: nginx-config
-              mountPath: /etc/nginx/nginx.conf
-              subPath: nginx.conf
-            - name: tls-certs
-              mountPath: /etc/nginx/ssl
-              readOnly: true
-          resources:
-            requests:
-              cpu: 50m
-              memory: 64Mi
-            limits:
-              cpu: 200m
-              memory: 256Mi
-      volumes:
-        - name: nginx-config
-          configMap:
-            name: collabora-nginx-config
-        - name: tls-certs
-          secret:
-            secretName: nextcloud-tls
+  ingressClassName: nginx
+  tls:
+    - hosts:
+        - collabora.ewe-netz-backup.de
+      secretName: collabora-tls
+  rules:
+    - host: collabora.ewe-netz-backup.de
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: collabora
+                port:
+                  number: 9980
 ---
-# Collabora NGINX Proxy Service (NodePort)
-apiVersion: v1
-kind: Service
-metadata:
-  name: collabora-nginx-proxy
-  namespace: nextcloud
-  labels:
-    app: collabora-nginx-proxy
-spec:
-  type: NodePort
-  selector:
-    app: collabora-nginx-proxy
-  ports:
-    - name: https
-      port: 443
-      targetPort: 443
-      nodePort: 30981
-      protocol: TCP
----
-# ==========================================
-# ENDE NEU HINZUGEFÜGT
-# ==========================================
-# HPB NGINX Reverse Proxy Deployment
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: talk-hpb-nginx-proxy
-  namespace: nextcloud
-  labels:
-    app: talk-hpb-nginx-proxy
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: talk-hpb-nginx-proxy
-  template:
-    metadata:
-      labels:
-        app: talk-hpb-nginx-proxy
-    spec:
-      containers:
-        - name: nginx
-          image: nginx:1.25-alpine
-          ports:
-            - containerPort: 443
-              name: https
-          volumeMounts:
-            - name: nginx-config
-              mountPath: /etc/nginx/nginx.conf
-              subPath: nginx.conf
-            - name: tls-certs
-              mountPath: /etc/nginx/ssl
-              readOnly: true
-          resources:
-            requests:
-              cpu: 50m
-              memory: 64Mi
-            limits:
-              cpu: 200m
-              memory: 256Mi
-      volumes:
-        - name: nginx-config
-          configMap:
-            name: talk-hpb-nginx-config
-        - name: tls-certs
-          secret:
-            secretName: nextcloud-tls
----
-# HPB NGINX Proxy Service (NodePort)
-apiVersion: v1
-kind: Service
-metadata:
-  name: talk-hpb-nginx-proxy
-  namespace: nextcloud
-  labels:
-    app: talk-hpb-nginx-proxy
-spec:
-  type: NodePort
-  selector:
-    app: talk-hpb-nginx-proxy
-  ports:
-    - name: https
-      port: 443
-      targetPort: 443
-      nodePort: 30444
-      protocol: TCP
